// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`list.mdx format 1`] = `
====================================options=====================================
parsers: ["mdx"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
- import is a word in lists
- export is a word in lists, too!

=====================================output=====================================
- import is a word in lists
- export is a word in lists, too!

================================================================================
`;

exports[`paragraph.mdx format 1`] = `
====================================options=====================================
parsers: ["mdx"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import is a word

=====================================output=====================================
import is a word


================================================================================
`;
